# kata

./: CONTRIBUTING.md  README.md  REGISTRATION_RESULT.md  pyproject.toml
deploy/sn60-model-relay/: Dockerfile  README.md
docs/: SCORING.md  evaluator-versioning.md  github-automation.md  gittensor-integration.md  milestones.md  submissions.md  system-workflow.md  workflow.md
kata/: challenge.py  cli.py  config.py  eval_runner.py  live_progress.py  provenance.py  public_artifacts.py  reporting.py  screening.py  sn60_model_relay.py  submissions.py
kata/evaluators/: sn60_bitsec.py
kata/interfaces/: cli.py
kata/promotion/: king.py
kata/promotion_system/: __init__.py  king.py
kata/screening/: similarity.py
kata/screening_system/: __init__.py  benchmark_replay.py  engine.py  llm_review.py  models.py  mutation_canary.py  python_ast.py  rules.py  sandbox_canary.py  similarity.py
kata/submission_system/: __init__.py  workflow.py
kata/submissions/: bundle.py  workflow.py
kata/validator_system/: __init__.py  challenge.py  model_relay.py  project_selection.py  tee_room.py
kings/sn60__bitsec/miner/: agent.py  (+2 more)
lanes/sn60__bitsec/: benchmark_snapshot.json  challenge_state.json  king.json  promotion_record.json
promptforge/: baseline.py  cli.py  eval_pack.py  eval_runner.py  generator.py  reporting.py  repository.py
public-results/: current.json
public-results/rounds/: sn60-round-20260719T025046Z-6bc66b.json
runs/add-delayed-proxies-article-20260628T200524Z/: run_summary.json
runs/add-delayed-proxies-article-20260628T200601Z/: run_summary.json
scripts/: run_claude_eval.sh  run_codex_eval.sh  run_python_agent_eval.sh
tests/: test_cli.py  test_live_progress.py  test_llm_review.py  test_mutation_canary.py  test_plugin_dispatch.py  test_promotion_system.py  test_sandbox_canary.py  test_screening.py  test_sn60_bitsec.py  test_sn60_challenge.py  test_sn60_model_relay.py  test_static_screen_dispatch.py  test_submission_system.py  test_submissions.py  test_validator_system.py
(+265 files in other folders)
