[project]
name = "kata"
version = "0.1.0"
description = "Objective coding-agent competition for repo-specific Gittensor repos."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Kata maintainers" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
kata = "kata.cli:main"
kata-sn60-model-relay = "kata.sn60_model_relay:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kata"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["kings", "runs", "submissions"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
