[project]
name = "kata"
version = "0.1.0"
description = "Objective coding-agent competition for repo-specific Gittensor repos."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Kata maintainers" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
kata = "kata.interfaces.cli:main"

# Subnet plugins are discovered via this entry-point group: each subnet package (its own repo,
# e.g. kata-sn60) declares one entry pointing at its SubnetPlugin singleton, and the core loads
# every installed one with no code change. See kata/packages/dispatch.py. (sn22 is still an
# in-repo stub pending its own repo extraction.)
[project.entry-points."kata.subnets"]
sn22 = "kata.packages.sn22:SN22_DESEARCH_PLUGIN"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kata"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["kings", "runs", "submissions"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
